--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.flex{
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-evenly;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar{
+  display: flex;
+  justify-content: space-between;
+}
+.navbar h1{
+  font: bold;
+  font-size: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.navbar button{
+  font-size: 10px;
 }
 
-.card {
-  padding: 2em;
+.search-container{
+  display: flex;
+  /* border: 1px solid red; */
+  justify-content: space-evenly;
+  background-color: white;
+  border-radius: 8px;
 }
 
-.read-the-docs {
-  color: #888;
+.search-label{
+  display: flex;
+  flex-direction: column;
+}
+
+.product-list{
+  background-color: white;
+  border-radius: 15px;
+}
+
+
+table{
+  width: 100%;
+}
+
+th{
+  text-align: left;
 }
